--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,10 +1,11 @@
 <% include ../partials/header %>
+
   <div class="row">
-    <h2 style="text-align: center;">Commenting on <%=profile.name%></h2>
+    <h2 style="text-align: center;">Commenting on <%= profile.name %></h2>
     <div style="width: 30%; margin: 20px auto;">
-      <form action="/profiles.<%=profile.id%>/comments" method="POST">
+      <form action="/profiles/<%= profile._id %>/comments" method="POST">
         <div class="form-group">
-          <input class="form-control" type="text" name="comment" placeholder="...">
+          <input class="form-control" type="text" name="comment[text]" placeholder="...">
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block">Submit</button>
