--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -28,3 +28,13 @@ img {
     margin: -2px;
     border-radius: 10px;
 }
+
+#commentDate {
+  font-size: 14px;
+  
+}
+
+#commentText {
+  background-color: rgba(55,95,25,.1);
+  border-radius: 99%;
+}
