--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,7 @@
           <ul class="dropdown-menu">
             <li><a href="/">Home</a></li>
             <li><a href="/profiles">Profiles</a></li>
+            <li><a href="/teams">Teams</a></li>
             <li><a href="#">Search</a></li>
                 </ul>
             </div>
