--- a/views/account.ejs
+++ b/views/account.ejs
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <strong><%= user.requests%></strong>
+        <strong><%= request.author %></strong>
         <p id="reqDate"><%= request.date%> @ <%= request.time%>
         </p>
         <div id="reqText" class="well">
