--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -7,6 +7,7 @@
    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
       <% profiles.forEach(function(profile){ %>
           <div class="col-md-3 col-sm-6">
+            <p><%= profile.name %></p>
               <div id="dexList">
                  <%= profile.game.gameName %>
                  <div class="thumbnail">
