--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,8 @@
       <ol style="text-align: center; margin-top: 15px;" class="breadcrumb">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href="/profiles">Profiles</a></li>
+        <li><a href="/teams">Teams</a></li>
       </ol>
     </div>
   </body>
