--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -11,7 +11,7 @@
               <div id="dexList">
                  <%= profile.game.gameName %>
                  <div class="thumbnail">
-                   <img src="/img/<%=profile.game.gameName%>.jpg">
+                   <img id="gameImg" src="/img/<%=profile.game.gameName%>.jpg">
                  </div>
                  <div class="caption">
                    <p><%= profile.bio %></p>
