--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -2,31 +2,37 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-        <div id="showSel" class="list-group">
+    <div id="showSel" class="col-md-3">
+        <div class="list-group">
             <li class="list-group-item"> <h2><%= team.name %></h2></li>
-            <div class="container">
-              
-            <img  src="/img/<%=team.game.gameImg%>.jpg">
-            
-        </div>
             <li class="list-group-item"><%= team.bio %></li>
+            <img id="gameImg" class="list-group-item" src="/img/<%=team.game.gameImg%>.jpg">
             </div>
         </div>
     </div>
+    <% team.players.forEach(function(player){%>
+    <div class="row">
+      <div class="col-md-12">
+        <p><strong><%= player.author.username %></strong></p>
+        </div>
+      </div>
+    </div>
+    <% }) %>
     <div>
       <div>
         <a id="addComment" class="btn btn-success" href="/teams/<%=team._id%>/comments/new">Add New Comment</a>
       </div>
     </div>
+    
     <% team.comments.forEach(function(comment){%>
     <div class="row">
       <div class="col-md-12">
         <strong><%= team.author.username%></strong>
-        <p id="commentDate"><%= comment.date%> @ <%= comment.time%>
+        <strong><%= team.comment%></strong>
+        <p id="commentDate"><%= comment.date%> @ <%= comment.time %>
         </p>
         <div id="commentText" class="well">
-          <%=comment.text%>
+          <%= comment.text%>
         </div>
       </div>
     </div>
