--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -1,5 +1,4 @@
 <% include ../partials/header %>
-
 <div class="container">
   <div class="row">
     <div id="showSel" class="col-md-3">
@@ -13,7 +12,7 @@
     <% team.players.forEach(function(player){%>
     <div class="row">
       <div class="col-md-12">
-        <p><strong><%= player.author.username %></strong></p>
+        <p><strong><%= player.username %></strong></p>
         </div>
       </div>
     </div>
