--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,14 @@
-      <ol style="text-align: center; margin-top: 15px;" class="breadcrumb">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/profiles">Profiles</a></li>
-        <li><a href="/teams">Teams</a></li>
-      </ol>
+         <div id="crumb" class="mx-auto">
+         <nav class="breadcrumb">
+          <a class="breadcrumb-item" href="/">Home</a>
+          <a class="breadcrumb-item" href="/profiles">Profiles</a>
+          <a class="breadcrumb-item" href="/teams">Teams</a>
+          <a class="breadcrumb-item" href="/about">About</a>
+        </nav>
+      </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
 </html>
