--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,42 +2,56 @@
 <html>
     <head>
         <title>Ring Match</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
     </head>
     <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/"><i class="fa fa-ravelry" aria-hidden="true"></i> RingMatch</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li role="separator" class="divider"></li>
-                    <% if(!currentUser){ %>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Sign Up</a></li>
-                    <% } else { %>
-                        <li><a href="/<%=currentUser.id%>/account">Signed In As <%= currentUser.username %></a></li>
-                        <li><a href="/logout">Logout</a></li>
-                    <% } %>
-                    <li role="separator" class="divider"></li>
-                    <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/profiles">Profiles</a></li>
-            <li><a href="/teams">Teams</a></li>
-            <li><a href="#">Search</a></li>
-                </ul>
-            </div>
+      
+    <nav id="navbar" class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="/">RingMatch</a>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          
+          <li style="color:white;" class="nav-link">/</li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/teams">Teams</a>
+          </li>
+          
+          <li style="color:white;" class="nav-link">/</li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/profiles">Profiles</a>
+          </li>
+        </ul>
+        <span class="navbar-toggler-right">
+      <% if(!currentUser){ %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+        <li class="nav-item"><a class="nav-link" href="/login">Sign Up</a></li>
+        </ul>
         </div>
+    <% } else { %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="/<%=currentUser.id%>/account">Signed In As <%= currentUser.username %></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        </ul>
+        </div>
+    <% } %>
+    </span>
+      </div>
     </nav>
+    
      <div class="container">
 
     <% if(error && error.length > 0){ %>
@@ -51,4 +65,5 @@
             </div>
         <% } %>
     </div>
+    
     
