--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
          <div id="crumb" class="mx-auto">
-         <nav class="breadcrumb">
+         <nav id="crumb" class="breadcrumb">
           <a class="breadcrumb-item" href="/">Home</a>
           <a class="breadcrumb-item" href="/profiles">Profiles</a>
           <a class="breadcrumb-item" href="/teams">Teams</a>
