--- a/views/account.ejs
+++ b/views/account.ejs
@@ -5,26 +5,21 @@
 <p>Member of <h3><%= user.teamname %></h3></p>
 </div>
 
-<div class="card card-inverse">
+<div id="accountCard" class="card card-inverse mx-auto">
   <img class="card-img" src="/img/<%=user.team.game.gameImg%>.jpg" alt="Card image">
-  <div class="card-img-overlay">
-    <h4 class="card-title">Card title</h4>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-  </div>
 </div>
 
 <% user.requests.forEach(function(request){%>
-<div class="container">
-    <div class="row">
-      <div class="col-md-12">
+<div class="container mx-auto">
+    <div class="card">
+      <div>
         <strong><%= request.author.username %></strong>
-        <p id="reqDate"><%= request.date%> @ <%= request.time%>
+        <p id="reqDate"><%= request.date%> @ <%= request.time %>
         </p>
-        <div id="reqText" class="well">
+        <div id="reqText">
           <p><%=request.text%></p>
           <p> From <%= request.team.name %></p>
-          <div id="requestBtn" class="row">
+          <div id="requestBtn">
              <form action="/<%=user.id%>/account/confirm/<%=request._id%>" method="POST">
              <input type="hidden" name="confirm" value="<%=request.team.id%>">
              <button style="margin-top: 15px; margin-left: 35px" class="btn btn-primary btn-lg btn-success">Confirm</button>
