--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,18 +1,25 @@
 <% include partials/header %>
-
+<i id="icon" class="fa fa-gamepad"></i>
   <link rel="stylesheet" href="stylesheets/landing.css">
     <div class="container">
       <div class="jumbotron">
+        <div class="container mx-auto">
         <h1>Welcome to RingMatch</h1>
         <p>Create an account to join the fray</p>
+        </div>
           <div class="container col-md-6">
-            <div class="row">
-             <a class="btn btn-primary" href="/register">Get Started</a></button>
+            <div id="landingRow" class="row mx-auto">
+              <% if(!currentUser){ %>
+            <a class="btn btn-primary" href="/register">Get Started</a></button>
+            <% } %>
             <a class="btn btn-success" href="/about" role="button">What is RingMatch?</a>
-            <a class="btn btn-success" href="/profiles" role="button">View Profiles</a>
+            <a class="btn btn-primary" href="/profiles" role="button">View Profiles</a>
+            <a id="btn3" class="btn btn-info" href="/teams" role="button">View Teams</a>
           </div>
         </div>
       </div>
     </div>
+    
+    
 
 <% include partials/footer %>
