--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/js/mdb.min.js"></script>
+        
     </head>
     <body>
       
@@ -13,20 +16,20 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/">RingMatch</a>
+      <a class="navbar-brand" href="/"><i class="fa fa-gamepad" aria-hidden="true"></i> RingMatch</a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           
-          <li style="color:white;" class="nav-link">/</li>
+          <li style="color:white;" class="nav-link"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
           
           <li class="nav-item">
             <a class="nav-link" href="/teams">Teams</a>
           </li>
           
-          <li style="color:white;" class="nav-link">/</li>
+          <li style="color:white;" class="nav-link"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
           
           <li class="nav-item">
             <a class="nav-link" href="/profiles">Profiles</a>
@@ -37,13 +40,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+        <li style="color:white;" class="nav-link"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
         <li class="nav-item"><a class="nav-link" href="/login">Sign Up</a></li>
         </ul>
         </div>
     <% } else { %>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="/<%=currentUser.id%>/account">Signed In As <%= currentUser.username %></li>
+        <li class="nav-item"><a class="nav-link" href="/<%=currentUser.id%>/account">Signed In As <%= currentUser.username %></a></li>
+        <li style="color:white;" class="nav-link"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
         </ul>
         </div>
