--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
         <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
         <li style="color:white;" class="nav-link"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
-        <li class="nav-item"><a class="nav-link" href="/login">Sign Up</a></li>
+        <li class="nav-item"><a class="nav-link" href="/register">Sign Up</a></li>
         </ul>
         </div>
     <% } else { %>
